--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h2>Этапы курса</h2>
         <div class="ptag">{{descript[currentDescr]}}</div>
         <div class="cont">
-          <div class="cont1" v-for="(value,i) in tap">
+          <div @click="handlrTap(i)" class="cont1" v-for="(value,i) in tap">
             <div v-if="passedInd.includes(i)" class="round">{{value.key}}</div>
             <div v-else class="noact">{{value.key}}</div>
             &nbsp;
